@@ -33,3 +33,9 @@ long ftell(FILE *f)
     }
     return r;
 }
+
+void rewind(FILE *f)
+{
+    fseek(f, 0L, SEEK_SET);
+    clearerr(f);
+}
