@@ -89,6 +89,7 @@ int fileno(FILE *f) _IMPL("libc/stdio/fileno.c");
 
 int  fseek(FILE *f, long offset, int whence) _IMPL("libc/stdio/fseek.c");
 long ftell(FILE *f)                          _IMPL("libc/stdio/fseek.c");
+void rewind(FILE *f)                         _IMPL("libc/stdio/fseek.c");
 
 int remove(const char *pathname) _IMPL("libsys/remove.c");
 
